--- a/FichierTest.ipynb
+++ b/FichierTest.ipynb
@@ -28,6 +28,31 @@
     "\n",
     "code()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65bbb0f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "        def _create_bricks(self):\n",
+    "            cols, rows = 10, 6         # 10 colonnes, 6 lignes\n",
+    "            pad = 12                   # marge entre briques\n",
+    "            top = 60                   # décalage du haut\n",
+    "            bL, bH = 100, 24          # largeur/hauteur brique\n",
+    "\n",
+    "            start_x = (W - (cols*bL + (cols-1)*pad)) // 2  # centrer le mur\n",
+    "\n",
+    "            for r in range(rows):\n",
+    "                for c in range(cols):\n",
+    "                    x = start_x + c*(bL + pad)\n",
+    "                    y = top     + r*(bH + pad)\n",
+    "                    b = Brique()\n",
+    "                    b.set_position(x, y)\n",
+    "                    b.draw(self.canvas)\n",
+    "                    self.briques.append(b)"
+   ]
   }
  ],
  "metadata": {
